Update for Drupal 8.3.

--- a/config/install/core.entity_form_display.comment.comment.default.yml
+++ b/config/install/core.entity_form_display.comment.comment.default.yml
@@ -13,6 +13,7 @@ mode: default
 content:
   author:
     weight: -2
+    region: content
   comment_body:
     type: text_textarea
     weight: 11
@@ -20,6 +21,7 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+    region: content
   subject:
     type: string_textfield
     weight: 10
@@ -27,4 +29,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
