--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
   "homepage": "https://gitlab.com/drutopia/drutopia_comment",
   "minimum-stability": "dev",
   "require": {
-    "drupal/config_actions": "^1.0-beta1",
+    "drupal/config_actions": "^1.0-beta1"
   }
 }
