OK let's try versions as we define them
Not the reversed way Drupal somehow secretly does.  My hunch is that 'extra' info is used
only by packages.drupal.org and is ignored by straight composer.

--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
   "license": "GPL-2.0+",
   "homepage": "https://gitlab.com/drutopia/drutopia_comment",
   "minimum-stability": "dev",
-  "version": "dev-1.x",
-  "version_normalized": "dev-1.x",
+  "version": "1.x-dev",
+  "version_normalized": "1.x-dev",
   "extra": {
     "branch-alias": {
-      "dev-1.x": "1.x-dev"
+      "1.x-dev": "dev-1.x"
     }
   },
   "require": {
